--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "An api app for Hospital",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/mocha/bin/mocha ./tests"
   },
   "author": "Vishav Gupta",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.1.2",
     "mongoose": "^5.9.9",
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "superagent": "^5.2.2",
+    "supertest": "^4.0.2"
   }
 }
